--- a/src/main/resources/static/htmls/index.html
+++ b/src/main/resources/static/htmls/index.html
@@ -113,7 +113,7 @@
 					<a href="chengyu.html" style="font-size: x-large"  ><b>成语</b></a>&nbsp;&nbsp;&nbsp;
 					<a href="chengyu.html" style="font-size: x-large"><b>作者</b></a>&nbsp;&nbsp;&nbsp;
 					<a href="chengyu.html" style="font-size: x-large"><b>文献</b></a>&nbsp;&nbsp;&nbsp;
-					<a href="statistics.html" style="font-size: x-large"><b>时空间GIS</b></a>&nbsp;&nbsp;&nbsp;
+					<a href="st_gis.html" style="font-size: x-large"><b>时空间GIS</b></a>&nbsp;&nbsp;&nbsp;
 					<a href="chengyu.html" style="font-size: x-large"><b>知识图谱</b></a>&nbsp;&nbsp;&nbsp;
 					<a href="chengyu.html" style="font-size: x-large"><b>老子</b></a>&nbsp;&nbsp;&nbsp;
 				</div>
