--- a/src/main/resources/static/htmls/st_gis.html
+++ b/src/main/resources/static/htmls/st_gis.html
@@ -112,8 +112,8 @@
   </div>
   <div class="swiper-container swiper-container-banner">
     <div class="info_tree">
-        <p class="static_title">统计分析图</p><br>
-        <img src="../images/static.jpg" width="100%">
+        <p class="static_title">gis图</p><br>
+        <img src="../images/kk.jpg" width="100%">
     </div>
   </div>
 </div>
