--- a/src/main/resources/static/htmls/statistics.html
+++ b/src/main/resources/static/htmls/statistics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> 时空间GIS</title>
+  <title> 统计图</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="../css/base.css" type="text/css">
   <link rel="stylesheet" href="../css/style_chengyu.css" type="text/css">
