添加文献功能

--- a/src/main/resources/static/htmls/literature.html
+++ b/src/main/resources/static/htmls/literature.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>成语知识图谱</title>
+	<title>文献索引</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="../css/base.css" type="text/css">
 	<link rel="stylesheet" href="../css/style_chengyu.css" type="text/css">
@@ -51,11 +51,11 @@
             width:100%;
             position:absolute;
             top:180px;
-	        left: 50%;
+            left: 50%;
             z-index:1;
-	        font-size: 50px;
-	        font-weight: bold;
-	        font-family: "Cursive";
+            font-size: 50px;
+            font-weight: bold;
+            font-family: "Cursive";
         }
 
         .swiper-scrollbar-drag {
@@ -93,8 +93,8 @@
 <style>
     body{
         background:url(../images/view.png) top left;
-	    width: 100%;
-	    height: 100%;
+        width: 100%;
+        height: 100%;
         background-size:cover;
         overflow:scroll;
     }
@@ -107,17 +107,17 @@
 </div>
 <div class="index-container">
 	<div class="swiper-container swiper-container-banner">
-			<div class="swiper-slide swiper-slide-active" style="background-repeat: no-repeat;
+		<div class="swiper-slide swiper-slide-active" style="background-repeat: no-repeat;
 			                      min-height: 836px;height: auto;  background-size: cover; width: 781px;">
-				<div class="a_href">
-					<a href="chengyu.html" style="font-size: x-large"  ><b>成语</b></a>&nbsp;&nbsp;&nbsp;
-					<a href="chengyu.html" style="font-size: x-large"><b>作者</b></a>&nbsp;&nbsp;&nbsp;
-					<a href="literature.html" style="font-size: x-large"><b>文献</b></a>&nbsp;&nbsp;&nbsp;
-					<a href="st_gis.html" style="font-size: x-large"><b>时空间GIS</b></a>&nbsp;&nbsp;&nbsp;
-					<a href="chengyu.html" style="font-size: x-large"><b>知识图谱</b></a>&nbsp;&nbsp;&nbsp;
-					<a href="chengyu.html" style="font-size: x-large"><b>老子</b></a>&nbsp;&nbsp;&nbsp;
-				</div>
+			<div class="a_href">
+				<a href="chengyu.html" style="font-size: x-large"  ><b>成语</b></a>&nbsp;&nbsp;&nbsp;
+				<a href="chengyu.html" style="font-size: x-large"><b>作者</b></a>&nbsp;&nbsp;&nbsp;
+				<a href="chengyu.html" style="font-size: x-large"><b>文献</b></a>&nbsp;&nbsp;&nbsp;
+				<a href="st_gis.html" style="font-size: x-large"><b>时空间GIS</b></a>&nbsp;&nbsp;&nbsp;
+				<a href="chengyu.html" style="font-size: x-large"><b>知识图谱</b></a>&nbsp;&nbsp;&nbsp;
+				<a href="chengyu.html" style="font-size: x-large"><b>老子</b></a>&nbsp;&nbsp;&nbsp;
 			</div>
+		</div>
 	</div>
 </div>
 
